# marklogic-mcp

./: .env  .env.example  .gitignore  Dockerfile  README.md  insert_doc.json  marklogic_mcp_server.py  marklogic_mcp_server.ts  mcp.json  package-lock.json  package.json  pyproject.toml  pyproject.toml.example  ref.py  requirements.txt  test.sh  tsconfig.json
mcp_marklogic/: __init__.py  server.py
src/marklogic_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/mcp_marklogic/: __init__.py  main.py  server.py
tests/: test_marklogic_integration.py  test_marklogic_server.py
types/: marklogic.d.ts
