[project]
name = "mcp-marklogic"
version = "0.1.0"
description = "A MarkLogic MCP server"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["mcp>=1.6.0", "marklogic-python-client>=1.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "pytest>=7.0.0", "pytest-asyncio>=0.20.3"]

[project.scripts]
mcp-marklogic = "mcp_marklogic:main"
