[project]
name = "mcp-marklogic"
version = "0.1.0"
description = "A MarkLogic MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["mcp", "marklogic-python-client"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "pytest>=7.0.0", "pytest-asyncio>=0.20.3"]

[project.scripts]
intruder-mcp = "mcp_marklogic.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_marklogic"] 